# Django_Server_Push_Attempt_1

./: pyproject.toml
mysite/: settings.py
render/: views.py
render/templates/render/: index.html
