[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["ShalaevPavel <lohgewt123@yandex.by>"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.7"
django = "^4.1.4"
dj-database-url = "^1.2.0"
psycopg2-binary = "^2.9.5"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
